Kodlama.IO Day 14

--- a/EnginDemirog/Kodlama.io/FinalProject/WebAPI/appsettings.json
+++ b/EnginDemirog/Kodlama.io/FinalProject/WebAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "alptekin.ocakdan@gmail.com",
+    "Issuer": "alptekin.ocakdan@gmail.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysupersecretkeymysupersecretkey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
