--- a/FrontEnd/northwind/package.json
+++ b/FrontEnd/northwind/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.0.0",
+    "@angular/animations": "^15.0.3",
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
@@ -21,6 +21,7 @@
     "bootstrap": "^5.2.3",
     "jquerry": "^0.0.1-security",
     "jquery": "^3.6.1",
+    "ngx-toastr": "^16.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
